include_directories(SYSTEM
  ${IGNITION-COMMON_INCLUDE_DIRS}
  ${IGNITION-MSGS_INCLUDE_DIRS}
  ${IGNITION-RENDERING_INCLUDE_DIRS}
  ${IGNITION-TRANSPORT_INCLUDE_DIRS}
  .
  )

link_directories(
  ${IGNITION-COMMON_LIBRARY_DIRS}
  ${IGNITION-MSGS_LIBRARY_DIRS}
  ${IGNITION-RENDERING_LIBRARY_DIRS}
  ${IGNITION-TRANSPORT_LIBRARY_DIRS}
  )

add_library(gazeboRenderSystem SHARED RenderSystem.cc)

target_link_libraries(gazeboRenderSystem
  GazeboECS
  ${IGNITION-COMMON_LIBRARIES}
  ${IGNITION-MSGS_LIBRARIES}
  ${IGNITION-RENDERING_LIBRARIES}
  ${IGNITION-TRANSPORT_LIBRARIES}
  )

install (TARGETS gazeboRenderSystem DESTINATION ${GAZEBO_PLUGIN_INSTALL_PATH})
